--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <canvas id="canvas" width="1000" height="640"></canvas>
+
+    <script src="Player.js"></script>
     <script src="Game.js"></script>
 </body>
 
