--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <canvas id="canvas" width="1000" height="640"></canvas>
 
-    <script src="Player.js"></script>
     <script src="Game.js"></script>
-    
+    <script src="Player.js"></script>
+    <script src="Enemies.js"></script>
+
 </body>
 
 </html>
