Se agrega primera versión de musica

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <title>Nightmare Runner</title>
 </head>
 
+
+
+<embed src="music.mp3" autostart="true" loop="true" hidden="true"> 
+
+
 <body>
     <canvas id="canvas" width="1000" height="640"></canvas>
 
     <script src="Game.js"></script>
     <script src="Player.js"></script>
     <script src="Enemies.js"></script>
+
+
+    <!-- <button  id = "lol" 3onclick="myFunction()">Click me</button> -->
 
 </body>
 
