Se modifica el tamaño de los enemigos para que sea proporcional con el personaje

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
 <body>
     <canvas id="canvas" width="1000" height="640"></canvas>
+    <input type="text" placeholder="holaa">
 
     <script src="Game.js"></script>
     <script src="Player.js"></script>
     <script src="Enemies.js"></script>
-
-
-    <!-- <button  id = "lol" 3onclick="myFunction()">Click me</button> -->
 
 </body>
 
