Se agregan estructuras de carpetas y música correctamente

--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nightmare Runner</title>
 </head>
 
 
+<audio id="song" src="Sound/music.mp3" muted></audio>
 
-<embed src="music.mp3" autostart="true" loop="true" hidden="true">
-
+<!-- <embed src="music.mp3" autostart="true" loop="true" hidden="true"> -->
 
 <body>
-    <canvas id="canvas" width="1000" height="640"></canvas>
-
-    <script src="Game.js"></script>
-    <script src="Player.js"></script>
-    <script src="Enemies.js"></script>
-
+    <canvas id="canvas" width="1000" height="640" ></canvas>
+    <script src="Js/Game.js"></script>
+    <script src="Js/Player.js"></script>
+    <script src="Js/Enemies.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 
 </html>
