--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 
 
-<audio id="song" src="Sound/music.mp3" muted></audio>
-
-<!-- <embed src="music.mp3" autostart="true" loop="true" hidden="true"> -->
-
 <body>
-    <canvas id="canvas" width="1000" height="640" ></canvas>
+
+    <audio id="song" src="Sound/music.mp3" muted></audio>
+    <canvas id="canvas" width="1000" height="640" style="display:block"></canvas>
     <script src="Js/Game.js"></script>
     <script src="Js/Player.js"></script>
     <script src="Js/Enemies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </body>
 
 </html>
