--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nightmare Runner</title>
+    <link rel="stylesheet" href="Css/menu.css">
+    <title>Nightmare-Runner</title>
+
 </head>
 
+<body class="c-body">
+    <div class="menu">
+        <h1 class="title">Nightmare Runner</h1>
+        <ul>
+            <li id="start" class="button button--start">Start</li>
+            <li class="button button--scores">Scores</li>
+            <li class="button button--about">About</li>
+        </ul>
+    </div>
 
-<body>
-
-    <audio id="song" src="Sound/music.mp3" muted></audio>
-    <canvas id="canvas" width="1000" height="640" style="display:block"></canvas>
-    <script src="Js/Game.js"></script>
-    <script src="Js/Player.js"></script>
-    <script src="Js/Enemies.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+    <script src="Js/Menu.js"></script>
 </body>
 
 </html>
