Se agrega Menu de inicio

--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Nightmare Runner</title>
     <link rel="stylesheet" href="Css/menu.css">
-    <title>Nightmare-Runner</title>
-
 </head>
 
-<body class="c-body">
-    <div class="menu">
-        <h1 class="title">Nightmare Runner</h1>
-        <ul>
-            <li id="start" class="button button--start">Start</li>
-            <li class="button button--scores">Scores</li>
-            <li class="button button--about">About</li>
-        </ul>
-    </div>
-
+<body>
+    <canvas id="myCanvas" width="470" height="320"></canvas>
     <script src="Js/Menu.js"></script>
 </body>
 
