--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <audio id="menu-music" src="Sound/menu_music.mp3" muted></audio>
     <canvas id="myCanvas" width="470" height="320"></canvas>
     <script src="Js/Menu.js"></script>
 </body>
